Fixed bugs in code

--- a/analyse_acc_data_050720.ipynb
+++ b/analyse_acc_data_050720.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import nbconvert\n",
     "import math"
    ]
@@ -20,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# user_input = input(\"Please input the location of your excel file: \\n\")\n",
-    "user_input = input()\n",
+    "user_input = input(\"Please input the location of your excel file: \\n\")\n",
     "# print(f\"You inputted: {user_input}. File is now running...\")\n",
     "\n",
     "acceleration_data = pd.read_excel(user_input, sheet_name=None)\n"
@@ -114,7 +112,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# ARCHIVED\n",
     "# def get_total_dist(accum_v, method = 's'):\n",
     "#     total_dist = 0\n",
@@ -177,29 +174,25 @@
     "    if type(df.iloc[0][0]) != float:\n",
     "        df = format_headers(df)\n",
     "        \n",
-    "    acc_y = df[\"Average Y\"]\n",
+    "    acc_y = df[\"Average Y\"].dropna(how='all')\n",
     "#     acc_y_calibrated = df[\"Average Y calibrated\"]\n",
     "    \n",
-    "\n",
-    "\n",
     "    try: \n",
-    "    #         Remove all rows where all values are blank > Retrieve the last value\n",
+    "#         Remove all rows where all values are blank > Retrieve the last value\n",
     "        last_value_of_t = df[\"Timestamp\"].dropna(how='all').iloc[-1]\n",
-    "        t = df[\"Timestamp\"]\n",
-    "\n",
-    "    # If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it\n",
+    "        t = df[\"Timestamp\"].dropna(how='all')\n",
+    "    \n",
+    "    # If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it. 'pass' because values assigned to t already is correct\n",
     "        if type(last_value_of_t) == float:\n",
-    "            t = df[\"Timestamp\"]\n",
+    "            pass\n",
     "        else:\n",
-    "    #             Convert series to a list\n",
-    "            time_formatted = list(last_value_of_t)\n",
+    "    # Retrieve index of time that is not 'NaN'. This is equivalent to retrieving maximum time (I.e. Most number of rows)\n",
+    "            time_formatted = [i for i, el in enumerate(list(t.iloc[-1])) if not math.isnan(el)]\n",
+    "            idx = time_formatted[0] # This works because there should only be 1 value that is 'NaN' \n",
+    "    # If there is 2 or more, this means that all the time end at the same row / time which is highly unlikely. Even if it does happen, I will still be retrieving the idx of the max t\n",
+    "    # t = Col with most number of rows\n",
+    "            t = df[\"Timestamp\"].dropna(how='all').iloc[:, idx]\n",
     "\n",
-    "\n",
-    "            # Retrieve maximum time (I.e. Most number of rows)\n",
-    "            max_t = [t for t in time_formatted if not math.isnan(t)]\n",
-    "            idx = time_formatted.index(max_t[0])\n",
-    "            # t = Col with most number of rows\n",
-    "            t = df[\"Timestamp\"].dropna(how='all').iloc[:,idx]\n",
     "    except:\n",
     "        print(\"Please ensure that there is no column labelled 'Timestamp' that is empty. If so, please remove the header, 'Timestamp'\")\n",
     "#     Obtain an array of negative values\n",
@@ -287,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
