Formatted code "Edited analyse_acc_data"

--- a/analyse_acc_data_110720.ipynb
+++ b/analyse_acc_data_110720.ipynb
@@ -169,13 +169,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "type(acceleration_data['Jurong East to Bukit Batok'].iloc[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial = acceleration_data['Jurong East to Bukit Batok'].iloc[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial = trial.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(trial.iloc[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial.iloc[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial.iloc[156]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial.index[int(trial.iloc[-1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = trial[trial == trial.iloc[-1]].index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial.iloc[:idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_graph(df, title, method = 's'):\n",
     "#     Format headers as long as the first row is not a numerical value\n",
     "    if type(df.iloc[0][0]) != float:\n",
     "        df = format_headers(df)\n",
-    "        \n",
-    "    acc_y = df[\"Average Y\"].dropna(how='all')\n",
-    "#     acc_y_calibrated = df[\"Average Y calibrated\"]\n",
     "    \n",
     "    try: \n",
     "#         Remove all rows where all values are blank > Retrieve the last value\n",
@@ -195,6 +273,15 @@
     "\n",
     "    except:\n",
     "        print(\"Please ensure that there is no column labelled 'Timestamp' that is empty. If so, please remove the header, 'Timestamp'\")\n",
+    "        \n",
+    "\n",
+    "#  To ensure that num rows of acc_y correspond to t\n",
+    "#  Note: This only works if t.iloc[-1] is a number and not an error like 'nan'\n",
+    "    last_idx = t[t == t.iloc[-1]].index[0]\n",
+    "    acc_y = df[\"Average Y\"].dropna(how='all').iloc[:last_idx]\n",
+    "#   acc_y_calibrated = df[\"Average Y calibrated\"]\n",
+    "        \n",
+    "\n",
     "#     Obtain an array of negative values\n",
     "    negative_values = [value for value in acc_y if value < 0]\n",
     "\n",
@@ -262,6 +349,13 @@
     "for i, title in enumerate(acceleration_data):\n",
     "    plot_graph(acceleration_data[title], title)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -280,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
