Now able to analyse data from .csv files

--- a/analyse_acc_data_260720.ipynb
+++ b/analyse_acc_data_260720.ipynb
@@ -11,7 +11,13 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "import time\n",
-    "start_time = time.time()"
+    "start_time = time.time()\n",
+    "\n",
+    "# Used for loading csv files into excel\n",
+    "import openpyxl\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "import os\n",
+    "import glob"
    ]
   },
   {
@@ -20,12 +26,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_input = input(\"Please input the location of your excel file: \\n\")\n",
-    "print(f'''\n",
-    "You inputted: {user_input}.\n",
-    "File is now running...''')\n",
+    "def hasNumbers(inputString):\n",
+    "    return any(char.isdigit() for char in inputString)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sorted_dict(file_names):\n",
+    "    '''\n",
+    "    Input: Requires a list of .csv files\n",
+    "    Output:\n",
+    "    - A dictionary with values sorted according to the train trip\n",
+    "    - file_names excluding '.csv'\n",
+    "    \n",
+    "    '''\n",
     "\n",
-    "acceleration_data = pd.read_excel(user_input, sheet_name=None)\n"
+    "    d = {}\n",
+    "\n",
+    "    # Retrieve file_names\n",
+    "    file_names = ''.join(all_files).split('.csv')[:-1]\n",
+    "\n",
+    "\n",
+    "    for name in file_names:\n",
+    "\n",
+    "    # If name of file as a digit, find index of digit\n",
+    "        if hasNumbers(name):\n",
+    "\n",
+    "    # Find the index of the digit\n",
+    "            idx = [char.isdigit() for char in name].index(True)\n",
+    "\n",
+    "    # Split by the index and store the front end as the key\n",
+    "    # Note: '-1' is to exclude the whitespace as well\n",
+    "            key = name[:idx-1]\n",
+    "            if key in d:\n",
+    "                d[key].append(name)\n",
+    "            else:\n",
+    "                d[key] = [name]\n",
+    "        else:\n",
+    "            if name in d:\n",
+    "                d[name].append(name)\n",
+    "            else:\n",
+    "                d[name] = [name]\n",
+    "\n",
+    "    \n",
+    "    return d, file_names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def csv_to_excel(d, wb, acc_header):\n",
+    "    '''\n",
+    "    Input: A dictionary of .csv file names, Excel workbook, Header of acceleration values to calculate average acceleration values\n",
+    "    Output: Data imported into excel workbook\n",
+    "    '''\n",
+    "\n",
+    "\n",
+    "    # For each key in dictionary\n",
+    "    for i, key in enumerate(d):\n",
+    "\n",
+    "    #     Convert the respective files into a list of df\n",
+    "        df_list = [pd.read_csv(f'{file}.csv') for file in d[key]]\n",
+    "\n",
+    "    #     Concatenate the dfs into 1\n",
+    "        concat_df = pd.concat(df_list, axis = 1)\n",
+    "\n",
+    "    #     Create a new column: Average of all acceleration data\n",
+    "        concat_df['Average Y'] = concat_df[acc_header].mean(axis=1)\n",
+    "\n",
+    "    #     Store key as title of file\n",
+    "        title = key\n",
+    "\n",
+    "    #     Create ws with the title == key of dictionary\n",
+    "        ws = wb.create_sheet(index=i, title=title)\n",
+    "\n",
+    "    #     Import the df into the excel sheet\n",
+    "        for r in dataframe_to_rows(concat_df, index=False, header=True):\n",
+    "            ws.append(r)\n",
+    "\n",
+    "    try:\n",
+    "        wb.save(f'{excel_wb_name}.xlsx')\n",
+    "        print(f\"Excel workbook created at {user_dir}\")\n",
+    "    except:\n",
+    "        print('''\n",
+    "        Excel file failed to create. \n",
+    "        Please check that the name given does not contain the following special characters:\n",
+    "        / \\ : * ? \" < > | ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new Excel workbook\n",
+    "wb = openpyxl.Workbook()\n",
+    "# Just to remove the spare sheet\n",
+    "wb.remove(wb.active)\n",
+    "\n",
+    "# Retrieve directory containing all .csv files\n",
+    "user_dir = input(\"Please input the path to the directory containing all the .csv files: \")\n",
+    "path = 'c:\\\\'\n",
+    "extension = 'csv'\n",
+    "os.chdir(user_dir)\n",
+    "all_files = glob.glob('*.{}'.format(extension))\n",
+    "d, file_names = sorted_dict(all_files)\n",
+    "\n",
+    "# Ask User for header of timestamp, of acc values\n",
+    "t_header = input(\"Please input the name of the header for the timestamp column (CASE-SENSITIVE): \")\n",
+    "acc_header = input(\"Please input the name of the header for the acceleration column (CASE-SENSITIVE): \")\n",
+    "excel_wb_name = input(\"An excel workbook will be created. Please input your preferred name (CASE-SENSITIVE): \")\n",
+    "print(\"File is running...\")\n",
+    "\n",
+    "try:\n",
+    "    csv_to_excel(d, wb, acc_header)\n",
+    "except:\n",
+    "    print(\"Please ensure that the folder only contains .csv files for the accelerometer readings.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'''\n",
+    "Reading Excel file...''')\n",
+    "\n",
+    "acceleration_data = pd.read_excel(f'{excel_wb_name}.xlsx', sheet_name=None, header=None)\n"
    ]
   },
   {
@@ -35,9 +171,17 @@
    "outputs": [],
    "source": [
     "def format_headers(df):\n",
-    "    header = df.iloc[0]\n",
-    "    df = df[1:]\n",
-    "    df.columns = header\n",
+    "    \n",
+    "# Format headers as long as the first row is not a numerical value\n",
+    "# Note: Headers are not considered as the first row\n",
+    "# Note: '.item()' is to convert numpy types to native Python types\n",
+    "    try:\n",
+    "        if type(df.iloc[0, 0].item()) == float:\n",
+    "            pass\n",
+    "    except:\n",
+    "        header = df.iloc[0]\n",
+    "        df = df[1:]\n",
+    "        df.columns = header\n",
     "    return df"
    ]
   },
@@ -172,16 +316,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_graph(df, title, method = 's'):\n",
-    "#     Format headers as long as the first row is not a numerical value\n",
-    "    if type(df.iloc[0][0]) != float:\n",
-    "        df = format_headers(df)\n",
+    "def retrieve_x_and_y_axes(df):\n",
+    "    '''\n",
+    "    Returns the x and y axes for the plotting of graph\n",
+    "    x-axis: Time\n",
+    "    y-axis: Average Acceleration\n",
+    "    '''\n",
     "    \n",
     "    try: \n",
-    "#         Remove all rows where all values are blank then Retrieve the last value\n",
-    "        last_value_of_t = df[\"Timestamp\"].dropna(how='all').iloc[-1]\n",
-    "        t = df[\"Timestamp\"].dropna(how='all')\n",
-    "    \n",
+    "    # Remove all rows where all values are blank then Retrieve the last value    \n",
+    "        last_value_of_t = df[t_header].dropna(how='all').iloc[-1]\n",
+    "        t = df[t_header].dropna(how='all')\n",
+    "\n",
     "    # If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it. 'pass' because values assigned to t already is correct\n",
     "        if type(last_value_of_t) == float:\n",
     "            pass\n",
@@ -190,36 +336,49 @@
     "            time_formatted = [i for i, el in enumerate(list(t.iloc[-1])) if not math.isnan(el)]\n",
     "            idx = time_formatted[0] # This works because there should only be 1 value that is 'NaN' \n",
     "    # If there is 2 or more, this means that all the time end at the same row / time which is highly unlikely. Even if it does happen, I will still be retrieving the idx of the max t\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    # t = Col with most number of rows\n",
-    "            t = df[\"Timestamp\"].dropna(how='all').iloc[:, idx]\n",
-    "        \n",
+    "            t = df[t_header].dropna(how='all').iloc[:, idx]\n",
     "    except:\n",
     "        print(\"Please ensure that there is no column labelled 'Timestamp' that is empty. If so, please remove the header, 'Timestamp'\")\n",
     "        \n",
     "\n",
-    "#  Note: This only works if t.iloc[-1] is a number and not an error like 'nan'\n",
+    "# Note: This only works if t.iloc[-1] is a number and not an error like 'nan'\n",
     "    last_idx = t[t == t.iloc[-1]].index[0]\n",
     "    acc_y = df[\"Average Y\"].dropna(how='all').iloc[:last_idx]\n",
     "    \n",
-    "#     Find the idx of the first value of acc_y. Ensures that if first value of t happens to be blank for whatever reason, it will not be picked.\n",
+    "# Find the idx of the first value of acc_y. Ensures that if first value of t happens to be blank for whatever reason, it will not be picked.\n",
     "    first_float_idx = next((i for i, x in enumerate(acc_y) if isinstance(x, float)), None)\n",
     "    start_idx = next((i for i, x in enumerate(acc_y) if (x-acc_y.iloc[first_float_idx]) > 0.01), None)\n",
     "    \n",
-    "#     Re-assign both variables to ensure that num rows of acc_y correspond to t\n",
-    "    acc_y = df[\"Average Y\"].dropna(how='all').iloc[start_idx:last_idx]\n",
+    "# Re-assign both variables to ensure that num rows of acc_y correspond to t\n",
+    "    acc_y = df[\"Average Y\"].iloc[start_idx:last_idx]\n",
     "    t = t.iloc[start_idx:last_idx]\n",
     "#   acc_y_calibrated = df[\"Average Y calibrated\"]\n",
-    "        \n",
     "\n",
-    "#     Obtain an array of negative values\n",
+    "    return t, acc_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_graph(df, title, method = 's'):\n",
+    "    \n",
+    "    df = format_headers(df)\n",
+    "    \n",
+    "    t, acc_y = retrieve_x_and_y_axes(df)\n",
+    "\n",
+    "# Obtain an array of negative values\n",
     "    negative_value_list = [value for value in acc_y if value < 0]\n",
     "\n",
-    "#     Retrieve the index of the first negative value\n",
+    "# Retrieve the index of the first negative value\n",
     "    negative_value = acc_y[acc_y == negative_value_list[0]].index[0]\n",
     "    \n",
-    "#     If the length from start to negative_value is less than 10% of all data points, retrieve next negative value\n",
+    "# If the length from start to negative_value is less than 10% of all data points, retrieve next negative value\n",
     "# This ensures that negative values that appear early on does not cause threshold to anomalously be placed incorrectly\n",
     "    until_negative_list = acc_y[:negative_value-1]\n",
     "    i = 1\n",
@@ -268,8 +427,6 @@
     "        Ensure that the name of your excel sheet is labelled <station_start> to <station_end>\n",
     "        The ' to ' in between both station names is important!\n",
     "        ''')\n",
-    "    \n",
-    "    \n",
     "\n",
     "    total_time_taken = t.iloc[-1]\n",
     "#     We cannot simply retrieve last value of t as the first value of t is NOT 0\n",
@@ -357,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
