--- a/Acc_Generator V2.ipynb
+++ b/Acc_Generator V2.ipynb
@@ -668,6 +668,7 @@
     "    df = csv2df(file_name, title, output_path)\n",
     "    # Calculations to get the adjusted acceleration, velocity, and displacement\n",
     "    df = dfFormat(df) \n",
+    "    df.to_csv(formatted_output_path)\n",
     "    \n",
     "    # Calculate Data Insights\n",
     "    result_data = data(df)\n",
@@ -763,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
