Implement the column & interval input

--- a/Acc_Generator V2.ipynb
+++ b/Acc_Generator V2.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,11 +99,17 @@
     "    \"\"\"\n",
     "    \n",
     "    # Get input for the columns\n",
+    "    interval = 0\n",
+    "    startIndex = 0\n",
     "    column_ids = [\"\", \"\", \"\", \"\"]\n",
     "    buffer = \"\"\n",
     "    isFinal = False\n",
     "    \n",
     "    while (isFinal == False):\n",
+    "        print(\"Enter the index of the first acceleration reading (0 for the first row): \")\n",
+    "        startIndex = input(\"Start Index: \")\n",
+    "        print(\"Enter the row interval for acceleration (if each row is the reading for acceleration, just enter 1): \")\n",
+    "        interval = input(\"Row Interval: \")\n",
     "        print(\"Enter the Column ID in A1 format (e.g. A, B, C) for the following items:\")\n",
     "        buffer = input(\"Time-stamp: \")\n",
     "        column_ids[0] = buffer\n",
@@ -117,7 +123,7 @@
     "        if (buffer.lower() == \"y\"):\n",
     "            isFinal = True\n",
     "    \n",
-    "    return column_ids"
+    "    return startIndex, interval, column_ids"
    ]
   },
   {
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -180,7 +186,7 @@
     "    formatted_output_path = output_path + \"/\" + title + \"-formatted.csv\"\n",
     "    \n",
     "    # Get the column ids where the required data is located from the user\n",
-    "    column_ids = getInputForColumns()\n",
+    "    startIndex, interval, column_ids = getInputForColumns()\n",
     "    # Transform the user input in A1 format into index for use later\n",
     "    # [0: Time-stamp, 1: Acceleration X, 2: Acceleration Y, 3: Acceleration Z]\n",
     "    column_indexes = [a1ToIndex(colID, True) for colID in column_ids]\n",
@@ -200,12 +206,17 @@
     "    formatted_csv.writerow(header)\n",
     "    \n",
     "    # Start filtering\n",
+    "    i = 0 #initial value for the index, used for mapping\n",
     "    for item in reader:\n",
-    "        if item[1] == 'acc':\n",
-    "            each_line = list(item)\n",
-    "            # Create a column for \"TimeElapsed\" later\n",
+    "        if (i - startIndex) % interval == 0:\n",
+    "            each_line = []\n",
+    "            each_line.append(item[column_index] for column_index in column_indexes)\n",
     "            each_line.insert(1,0)\n",
+    "            each_line.insert(2,\"Acceleration\")\n",
     "            formatted_csv.writerow(each_line)\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            i += 1\n",
     "    \n",
     "    # Closes the given file\n",
     "    my_file.close()\n",
@@ -762,6 +773,8 @@
     "    df = csv2df(file_name, title, output_path)\n",
     "    # Calculations to get the adjusted acceleration, velocity, and displacement\n",
     "    df = dfFormat(df) \n",
+    "    \n",
+    "    # Save the DataFrame as the csv file \n",
     "    df.to_csv(formatted_output_path)\n",
     "    \n",
     "    # Calculate Data Insights\n",
@@ -830,18 +843,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
   }
  },
  "nbformat": 4,
