Added support for SensorLog

--- a/analyse_acc_data_300720.ipynb
+++ b/analyse_acc_data_300720.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,8 +99,12 @@
     "        concat_df = pd.concat(df_list, axis = 1)\n",
     "\n",
     "    #     Create a new column: Average of all acceleration data\n",
-    "        concat_df['Average Y'] = concat_df[acc_header].mean(axis=1)\n",
-    "\n",
+    "        try:\n",
+    "            concat_df['Average Y'] = concat_df[acc_header].mean(axis=1)\n",
+    "        except:\n",
+    "    #         If only have 1 set of readings, still need to create a new column\n",
+    "            concat_df['Average Y'] = concat_df[acc_header].mean()\n",
+    "      \n",
     "    #     Store key as title of file\n",
     "        title = key\n",
     "\n",
@@ -125,15 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please input the path to the directory containing all the .csv files: ../data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create new Excel workbook\n",
     "wb = openpyxl.Workbook()\n",
@@ -156,7 +152,8 @@
     "\n",
     "try:\n",
     "    csv_to_excel(d, wb, acc_header)\n",
-    "except:\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
     "    print(\"Please ensure that the folder only contains .csv files for the accelerometer readings.\")\n"
    ]
   },
@@ -168,7 +165,6 @@
    "source": [
     "print(f'''\n",
     "Reading Excel file...''')\n",
-    "\n",
     "acceleration_data = pd.read_excel(f'{excel_wb_name}.xlsx', sheet_name=None, header=None)\n"
    ]
   },
@@ -363,6 +359,9 @@
     "# Re-assign both variables to ensure that num rows of acc_y correspond to t\n",
     "    acc_y = df[\"Average Y\"].iloc[start_idx:last_idx]\n",
     "    t = t.iloc[start_idx:last_idx]\n",
+    "    \n",
+    "#     Ensure that timestamp starts from 0\n",
+    "    t = t.subtract(df[t_header].iloc[0])\n",
     "#   acc_y_calibrated = df[\"Average Y calibrated\"]\n",
     "\n",
     "    return t, acc_y"
@@ -381,24 +380,33 @@
     "    t, acc_y = retrieve_x_and_y_axes(df)\n",
     "\n",
     "# Obtain an array of negative values\n",
-    "    negative_value_list = [value for value in acc_y if value < 0]\n",
-    "\n",
-    "# Retrieve the index of the first negative value\n",
-    "    negative_value = acc_y[acc_y == negative_value_list[0]].index[0]\n",
+    "    negative_value_list = acc_y[acc_y < 0]\n",
     "    \n",
-    "# If the length from start to negative_value is less than 10% of all data points, retrieve next negative value\n",
-    "# This ensures that negative values that appear early on does not cause threshold to anomalously be placed incorrectly\n",
-    "    until_negative_list = acc_y[:negative_value-1]\n",
+    "#     Only do this if there are negative values\n",
     "    i = 1\n",
-    "    while len(until_negative_list) < (len(t) * 0.1):\n",
-    "        negative_value = acc_y[acc_y == negative_value_list[i]].index[0]\n",
-    "        until_negative_list = acc_y[:negative_value-1]\n",
-    "        i += 1\n",
-    "    cut_off_t = t[negative_value-1] # Same as: t[len(until_negative_list)]\n",
+    "    if len(negative_value_list) > 0:\n",
+    "    # Retrieve the index of the first negative value\n",
+    "        cut_off_idx = negative_value_list.index[0]\n",
+    "        \n",
+    "\n",
+    "    # If the length from start to negative_value is less than 10% of all data points, retrieve next negative value\n",
+    "    # This ensures that negative values that appear early on does not cause threshold to anomalously be placed incorrectly\n",
+    "        while cut_off_idx < (len(t) * 0.2):\n",
+    "            cut_off_idx = negative_value_list.index[i]\n",
+    "            i += 1\n",
+    "    \n",
+    "        cut_off_t = t[cut_off_idx]\n",
+    "    else:\n",
+    "        cut_off_idx = acc_y.index[0]\n",
+    "        while cut_off_idx < (len(t) * 0.2):\n",
+    "            cut_off_idx = acc_y.index[i]\n",
+    "            i += 1\n",
+    "        cut_off_t = t[cut_off_idx]\n",
+    "        \n",
     "    \n",
     "#     print(len(until_negative_list), i)\n",
     "    \n",
-    "    acc_y_mean = sum(until_negative_list / len(until_negative_list))\n",
+    "    acc_y_mean = sum(acc_y[:cut_off_idx] / (cut_off_idx+1)) # '+1' because idx starts from 0\n",
     "    fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(12,6))\n",
     "\n",
     "#     Uncalibrated\n",
@@ -522,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
