--- a/Acc_Generator Final.ipynb
+++ b/Acc_Generator Final.ipynb
@@ -247,16 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"/Users/Sean/Desktop/Work/SUTD/Physics/Physical World 1 (1D Project)/Train Data/AMK to Yishun/AMK to YCK 3.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def csv_to_excel(d, output_path):\n",
+    "def csv_to_excel(d, output_path, is_ms):\n",
     "    '''\n",
     "    Input: A dictionary of .csv file names, title of file name\n",
     "    Output: Data imported into excel workbook\n",
@@ -312,7 +303,7 @@
     "                        else:\n",
     "                            i += 1\n",
     "                formatted_df = pd.read_csv(formatted_output_path,header = 0)\n",
-    "                timeElapsed(formatted_df)\n",
+    "                timeElapsed(formatted_df, is_ms)\n",
     "                #     Convert the respective files into a list of df\n",
     "                df_list.append(formatted_df)\n",
     "\n",
@@ -325,7 +316,7 @@
     "            concat_df['Average Y'] = concat_df['Acc-Y'].mean(axis=1)\n",
     "        except:\n",
     "    #         If only have 1 set of readings, still need to create a new column\n",
-    "            concat_df['Average Y'] = concat_df['Acc-Y'].mean()\n",
+    "            concat_df['Average Y'] = concat_df['Acc-Y']\n",
     "      \n",
     "    #     Store key as title of file\n",
     "        title = key\n",
@@ -369,9 +360,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def timeElapsed(df): \n",
+    "def timeElapsed(df, is_ms): \n",
+    "    \n",
     "    # Calculate and write a time_elapsed column\n",
-    "    df['TimeElapsed'] = df['TimeStamp'] - df['TimeStamp'].iloc[0]"
+    "    df['TimeElapsed'] = df['TimeStamp'] - df['TimeStamp'].iloc[0]\n",
+    "    \n",
+    "    if is_ms == 'y':\n",
+    "        df['TimeElapsed'] = df['TimeElapsed'] / 1000"
    ]
   },
   {
@@ -393,10 +388,10 @@
     "      # This is to retrieve the \"TimeElapsed column with the MOST number of rows!\"\n",
     "# Remove all rows where all values are blank then Retrieve the last value    \n",
     "    last_value_of_t = df[\"TimeElapsed\"].dropna(how='all').iloc[-1]\n",
-    "    t = df[\"TimeElapsed\"].dropna(how='all')\n",
+    "    t = df[\"TimeElapsed\"].dropna(how='all').reset_index(drop=True) # Shift the index back to 0!\n",
     "\n",
     "# If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it. 'pass' because values assigned to t already is correct\n",
-    "    if type(last_value_of_t) == float:\n",
+    "    if type(last_value_of_t) == float or type(last_value_of_t) == int:\n",
     "        pass\n",
     "    else:\n",
     "# Retrieve index of time that is not 'NaN'. This is equivalent to retrieving maximum time (I.e. Most number of rows)\n",
@@ -406,7 +401,7 @@
     "\n",
     "\n",
     "# t = Col with most number of rows\n",
-    "        t = df[\"TimeElapsed\"].dropna(how='all').iloc[:, idx].reset_index(drop=True) # Shift the index back to 0!\n",
+    "        t = t.iloc[:, idx]\n",
     "    #index of TimeInterval: 6\n",
     "    \n",
     "    # Retrieve all rows excluding last & reset the index (Shift it back down to 0)\n",
@@ -417,7 +412,6 @@
     "    timeInterval = pd.concat([pd.Series([0]), timeInterval]).reset_index(drop = True)\n",
     "    # Apparently, df[\"TimeInterval\"] values start from 1, hence the need for the code below\n",
     "    timeInterval.index = range(1,len(timeInterval)+1)\n",
-    "\n",
     "    \n",
     "    df[\"TimeInterval\"] = timeInterval\n",
     "\n",
@@ -446,11 +440,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accAdjust(df, smoothen_curve):\n",
+    "def accAdjust(df, smoothen_curve, format_acc):\n",
     "    '''Generate the Acc-Y-Adjusted and take the shift value into account'''\n",
     "    \n",
     "    #index of Acc-Y-Adjusted: 7\n",
-    "#     acc_Y = []\n",
+    "\n",
+    "    if format_acc == 'y':\n",
+    "        df[\"Average Y\"] = df[\"Average Y\"] * -9.81\n",
     "    acc_Y = df[\"Average Y\"]\n",
     "#     for i in range(len(df)):\n",
     "#         acc_Y.append(df.iloc[i,4]*9.8)\n",
@@ -518,7 +514,6 @@
     "    for i in range(1,len(df)):\n",
     "    # index8: V-btw2\n",
     "        ins_v.append(sum(df[\"V-btw2\"].iloc[:i-1]))\n",
-    "\n",
     "    df[\"V(t)\"] = ins_v"
    ]
   },
@@ -606,10 +601,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dfFormat(df, smoothen_curve):\n",
+    "def dfFormat(df, smoothen_curve, format_acc):\n",
     "    df = format_headers(df)\n",
     "    timeInterval(df)\n",
-    "    accAdjust(df, smoothen_curve)\n",
+    "    accAdjust(df, smoothen_curve, format_acc)\n",
     "    dv(df)\n",
     "    vt(df)\n",
     "    ds(df)\n",
@@ -711,7 +706,6 @@
    "source": [
     "def acc(df):\n",
     "    '''Get the cut-off time for acceleration & Average Acceleration'''\n",
-    "    \n",
     "    negative_acc_list = df[df[\"Acc-Y-Adjusted\"] < 0].index.tolist()\n",
     "    # To avoid early cut-off\n",
     "    # set the threshhold to be 1/4 of total journey\n",
@@ -985,30 +979,42 @@
     "      \n",
     "    print(\"Results will be available at: {}\".format(output_path))\n",
     "\n",
-    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            smoothen_curve = input(\"Please input a number from 1-15 (A larger number results in a smoother curve but some readings may be missing): \")\n",
+    "            if int(smoothen_curve) in range(1,16):\n",
+    "                pass\n",
+    "            else:\n",
+    "                continue\n",
+    "            format_acc = input(\"Is your acceleration measured in g? (I.e. '1' represents 9.81ms^-2) [Y]/[N]: \")\n",
     "\n",
-    "    # Reads csv file. Saves the new formatted file and converts it into a pandas data frame\n",
-    "#     df = csv2df(file_name, title, output_path)\n",
+    "            if format_acc.lower() == 'y' or format_acc.lower() == 'n':\n",
+    "                        pass\n",
+    "            else:\n",
+    "                continue\n",
+    "            is_ms = input(\"Is your time measured in ms? (I.e. '1000' represents 1s) [Y]/[N]: \")\n",
+    "            if is_ms.lower() == 'y' or is_ms.lower() == 'n':\n",
+    "                        break\n",
+    "        except:\n",
+    "            print(\"Invalid Input. Please try again.\")\n",
+    "            continue\n",
+    "\n",
     "#     Reads sorted dict of csv files. Converts them to data frame and concatenate similar ones together. Outputs excel wb\n",
-    "    excel_wb_name = csv_to_excel(d, output_path)\n",
+    "    excel_wb_name = csv_to_excel(d, output_path, is_ms)\n",
     "    \n",
     "    # Change back to original directory\n",
     "    os.chdir(my_path)\n",
     "    \n",
-    "    while True:\n",
-    "        smoothen_curve = input(\"Please input a number from 1-15 (A larger number results in a smoother curve but some readings may be missing): \")\n",
-    "        try:\n",
-    "            if int(smoothen_curve) in range(1,16):\n",
-    "                break\n",
-    "        except:\n",
-    "            pass\n",
+    "\n",
+    "\n",
     "    \n",
     "    acceleration_data = pd.read_excel(f'{excel_wb_name}.xlsx', sheet_name=None, header=None)\n",
     "    \n",
     "    for i, title in enumerate(acceleration_data):\n",
+    "        print(f\"Status: Running {i+1} / {len(acceleration_data)}\")\n",
     "        df = acceleration_data[title]\n",
     "        # Calculations to get the adjusted acceleration, velocity, and displacement\n",
-    "        df = dfFormat(df, smoothen_curve) \n",
+    "        df = dfFormat(df, smoothen_curve, format_acc) \n",
     "\n",
     "        # Save the DataFrame as the csv file\n",
     "        formatted_csv_path = output_path + \"/\" + title + \"-formatted.csv\"\n",
@@ -1039,7 +1045,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
